# plainquotes

./: README.md  setup.cfg  setup.py
plainquotes/: __init__.py  plainquotes.py
tests/: test_simple.py
