[metadata]
name = plainquotes
version = 0.0.1
url = https://www.github.com/sersanchus/plainquotes
author = Sergio Sancho Chust
author_email = sersanchus@gmail.com
summary = This package adds functionality to the auto plain nested quotes in a string
description_file = README.md
description_content_type = text/markdown